force-app/main/default/objects/Bypass_Toggle__mdt/Bypass_Toggle__mdt.object-meta.xml
<CustomObject>
    <description>This stores the selective toggle settings on/off for Flows, Process Builder Criteria Nodes, Triggers and Validation Rules. To bypass at profile or user level, refer to Org Exception Hierarchial Custom Settings.</description>
    <label>Bypass Toggle</label>
    <pluralLabel>Bypass Toggles</pluralLabel>
</CustomObject>