force-app/main/default/objects/Bypass_Toggle__mdt/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>Type of component where the logic is bypassed.</description>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Trigger</fullName>
                <default>true</default>
                <label>Apex Trigger</label>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Record-Triggered Flow</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>