force-app/main/default/objects/Bypass_Toggle__mdt/fields/Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Name__c</fullName>
    <description>Full name of the flow or process builder criteria node</description>
    <label>Criteria Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>