force-app/main/default/objects/Bypass_Toggle__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Name of the object the process toggle is associated to</description>
    <inlineHelpText>Specify the object for which the process criteria toggle is associated to.</inlineHelpText>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Entity_Definition</relationshipLabel>
    <relationshipName>Entity_Definition</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>