force-app/main/default/objects/Bypass_Toggle__mdt/fields/Other_Objects__c.field-meta.xml
<CustomField>
    <fullName>Other_Objects__c</fullName>
    <description>Other list of objects not in the dynamically generated Object list.</description>
    <inlineHelpText>Choose one of these objects that are not available in the Object picklist.</inlineHelpText>
    <label>Other Objects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
                <default>true</default>
                <label>Event</label>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>