force-app/main/default/objects/Bypass_Toggle__mdt/fields/Toggle_On_Off_Setting__c.field-meta.xml
<CustomField>
    <fullName>Toggle_On_Off_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On/off toggle for the process criteria</description>
    <inlineHelpText>Toggle On for the flow/criteria node to be skipped</inlineHelpText>
    <label>Toggle On/Off Setting</label>
    <type>Checkbox</type>
</CustomField>