force-app/main/default/objects/Bypass_Toggle__mdt/validationRules/OnlyOneObjectSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneObjectSelected</fullName>
    <active>true</active>
    <description>User can only select one object.</description>
    <errorConditionFormula>NOT(ISBLANK(TEXT(Object__c))) &amp;&amp; NOT(ISBLANK(TEXT(Other_Objects__c)))</errorConditionFormula>
    <errorMessage>You can select either an Object or Other Object. You cannot select a picklist in both.</errorMessage>
</ValidationRule>