force-app/main/default/objects/Bypass_Toggle__mdt/listViews/Record_Triggered_Flow_Toggles.listView-meta.xml
<ListView>
    <fullName>Record_Triggered_Flow_Toggles</fullName>
    <columns>DeveloperName</columns>
    <columns>Criteria_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Other_Objects__c</columns>
    <columns>Toggle_On_Off_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Record-Triggered Flow</value>
    </filters>
    <label>Record-Triggered Flow Toggles</label>
    <language>en_US</language>
</ListView>