force-app/main/default/objects/Bypass_Toggle__mdt/listViews/Validation_Rule_Toggles.listView-meta.xml
<ListView>
    <fullName>Validation_Rule_Toggles</fullName>
    <columns>DeveloperName</columns>
    <columns>Criteria_Name__c</columns>
    <columns>Object__c</columns>
    <columns>Other_Objects__c</columns>
    <columns>Toggle_On_Off_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Validation Rule</value>
    </filters>
    <label>Validation Rule Toggles</label>
    <language>en_US</language>
</ListView>